# ComfyUI-LivePortraitKJ

./: nodes.py  pyproject.toml  readme.md  requirements-mac.txt  requirements-tensorrt.txt  requirements.txt
examples/: liveportrait_example_01.json  liveportrait_image_example_01.json  liveportrait_realtime_example_01.json  liveportrait_video_example.json  liveportrait_video_example_02.json
face_alignment/: api.py
face_alignment/detection/: core.py
face_alignment/detection/blazeface/: blazeface_detector.py  detect.py  net_blazeface.py
face_alignment/detection/dlib/: dlib_detector.py
face_alignment/detection/folder/: folder_detector.py
face_alignment/detection/sfd/: bbox.py  detect.py  net_s3fd.py  sfd_detector.py
liveportrait/: live_portrait_pipeline.py  live_portrait_video_pipeline.py  live_portrait_wrapper.py  template_maker.py
liveportrait/config/: argument_config.py  inference_config.py
liveportrait/efficient/: __init__.py  predictor.py
liveportrait/efficient/config/: config.py
liveportrait/efficient/utils/: onnx_driver.py  tensorrt_driver.py  utils.py
liveportrait/modules/: dense_motion.py  util.py  warping_network.py
liveportrait/utils/: crop.py  cropper.py  face_analysis_diy.py  filter.py  helper.py  landmark_runner.py  retargeting_utils.py  video.py
media_pipe/: __init__.py  mp_utils.py
