[project]
name = "comfyui-liveportraitkj"
description = "Nodes for [a/LivePortrait](https://github.com/KwaiVGI/LivePortrait)"
version = "1.1.0"
license = { text = "MIT License" }
dependencies = ["pyyaml", "numpy", "opencv-python", "rich"]

[project.urls]
Repository = "https://github.com/kijai/ComfyUI-LivePortraitKJ"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "kijai"
DisplayName = "ComfyUI-LivePortraitKJ"
Icon = ""
